--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_echarts: ^2.3.0
   webview_flutter: ^4.7.0
+  flutter_downloader: ^1.11.7
+  dio: ^4.0.6
+  path_provider: ^2.0.11
 
 flutter_launcher_icons:
   android: true
